--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Pacifico&family=Poppins:wght@200;300;400&family=Roboto+Condensed&family=Roboto:wght@300;500&display=swap');
 body {
 	margin: 0;
 	padding: 0;
@@ -18,7 +19,10 @@ code {
 @tailwind utilities;
 
 
-
+#root{
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
+}
 
 .droplist::-webkit-scrollbar {
     display: none;
