error resolved related two charts

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: blue;
+	background-color: #833e58;
 }
 /* Style for displaying code using monospace font */
 code {
